--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -1,2 +1,4 @@
 @import '~@firestitch/component-tools/assets/playground.scss';
 @import '~@firestitch/message/styles';
+@import 'node_modules/@firestitch/filter/styles';
+@import 'node_modules/@firestitch/chip/styles';
