added toggle weekends

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -43,6 +43,7 @@
       <ng-container *ngFor="let toolbarMenuItem of toolbarMenuItems">
         <ng-template
             fs-menu-item
+            [show]="toolbarMenuItem.show"
             (click)="toolbarMenuItemClick(toolbarMenuItem)">
           {{toolbarMenuItem.label}}
         </ng-template>
