--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -37,7 +37,9 @@
       z-index: 2;
 
       td {
-        background-color: #fff;
+        &:NOT(.fc-day-today) {
+          background-color: #fff;
+        }
       }
     }
   }
