updated select button dependency

--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -1,5 +1,5 @@
 @import '~@firestitch/component-tools/assets/playground.scss';
 @import '~@firestitch/message/styles';
-@import '~@firestitch/selectbutton/styles';
+@import 'node_modules/@firestitch/selectbutton/styles';
 @import 'node_modules/@firestitch/filter/styles';
 @import 'node_modules/@firestitch/chip/styles';
